data/derived/comb/progs/unify/prog4908.ml.out
Characters 199-200:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         (int * int) list -> int list -> int * int list
       but an expression was expected of type
         (int * int) list -> int list -> (int * int) list
       Type int * int list is not compatible with type (int * int) list 
